--- a/assets/libs/css/custom-css.css
+++ b/assets/libs/css/custom-css.css
@@ -30,3 +30,8 @@
 .dashboard-wrapper {
     min-height: 100vh !important;
 }
+
+
+/* .nav-left-sidebar .submenu .nav .nav-item .nav-link {
+    padding: 8px;
+} */
