--- a/assets/libs/css/custom-css.css
+++ b/assets/libs/css/custom-css.css
@@ -1,50 +1,58 @@
-/* .dashboard-wrapper {
-    min-height: min-content;
-} */
-
 .nav-left-sidebar .nav-link[data-toggle="collapse"]::after {
-    margin-top: 8px;
+  margin-top: 8px;
 }
 
-.nav-left-sidebar .nav-link[data-toggle="collapse"][aria-expanded="false"]:after {
-    margin-top: 8px;
+.nav-left-sidebar
+  .nav-link[data-toggle="collapse"][aria-expanded="false"]:after {
+  margin-top: 8px;
 }
 
 .nav-left-sidebar .nav-link[data-toggle="collapse"]:after {
-    margin-top: 8px;
+  margin-top: 8px;
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
+  position: absolute;
+  bottom: 0;
 }
 
 .dashboard-main-wrapper {
-    padding-top: 0;
+  padding-top: 0;
 }
 
 .nav-left-sidebar {
-    top: 0;
+  top: 0;
 }
 
 .dashboard-wrapper {
-    min-height: 100vh !important;
+  min-height: 100vh !important;
 }
 
-
-/* .nav-left-sidebar .submenu .nav .nav-item .nav-link {
-    padding: 8px;
-} */
-
 #map {
-    height: 100%;
+  height: 100%;
 }
 
 .mp {
-    height: 100vh;
+  height: 100vh;
 }
 
 .gm-style .gm-style-iw-d {
-    box-shadow: none;
-    color: black;
+  box-shadow: none;
+  color: black;
+}
+
+@media only screen and (max-width: 768px) {
+  .nav-left-sidebar .navbar-toggler {
+    background-color: transparent;
+  }
+}
+
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3e%3cg data-name='Layer 2'%3e%3cg data-name='menu'%3e%3crect width='24' height='24' transform='rotate(180 12 12)' opacity='0'/%3e%3crect x='3' y='11' width='18' height='2' rx='.95' ry='.95'/%3e%3crect x='3' y='16' width='18' height='2' rx='.95' ry='.95'/%3e%3crect x='3' y='6' width='18' height='2' rx='.95' ry='.95'/%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+  filter: invert(1);
+}
+
+.btn:not(:disabled):not(.disabled) {
+  cursor: pointer;
+  margin-bottom: 10px;
 }
