--- a/assets/libs/css/custom-css.css
+++ b/assets/libs/css/custom-css.css
@@ -48,7 +48,7 @@
 }
 
 .navbar-light .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3e%3cg data-name='Layer 2'%3e%3cg data-name='menu'%3e%3crect width='24' height='24' transform='rotate(180 12 12)' opacity='0'/%3e%3crect x='3' y='11' width='18' height='2' rx='.95' ry='.95'/%3e%3crect x='3' y='16' width='18' height='2' rx='.95' ry='.95'/%3e%3crect x='3' y='6' width='18' height='2' rx='.95' ry='.95'/%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3e%3cg data-name='Layer 2'%3e%3cg data-name='menu-2'%3e%3crect width='24' height='24' transform='rotate(180 12 12)' opacity='0'/%3e%3ccircle cx='4' cy='12' r='1'/%3e%3crect x='7' y='11' width='14' height='2' rx='.94' ry='.94'/%3e%3crect x='3' y='16' width='18' height='2' rx='.94' ry='.94'/%3e%3crect x='3' y='6' width='18' height='2' rx='.94' ry='.94'/%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
   filter: invert(1);
 }
 
