--- a/assets/libs/css/custom-css.css
+++ b/assets/libs/css/custom-css.css
@@ -36,6 +36,10 @@
   height: 100vh;
 }
 
+.mp {
+  height: 80vh;
+}
+
 .gm-style .gm-style-iw-d {
   box-shadow: none;
   color: black;
@@ -55,4 +59,15 @@
 .btn:not(:disabled):not(.disabled) {
   cursor: pointer;
   margin-bottom: 10px;
+}
+
+.figure {
+  width: 100%; /*container-width*/
+  overflow: hidden; /*hide bounds of image */
+}
+
+.figure img {
+  margin: -10% 0 -10% 0;
+  display: block; /*remove inline-block spaces*/
+  width: 100%; /*make image streatch*/
 }
