uploaded some bug fixes

--- a/assets/libs/css/custom-css.css
+++ b/assets/libs/css/custom-css.css
@@ -66,9 +66,13 @@
   overflow: hidden; /*hide bounds of image */
 }
 
-/* 
 .figure img {
-  margin: -10% 0 -10% 0;
+  /*margin: -10% 0 -10% 0;*/
   display: block;
-  width: 100%; 
-} */
+  width: 100%;
+}
+
+.m-neg {
+  margin-top: -8px;
+  padding-top: 10px;
+}
